# StreamPipe

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: quickstart.md
include/streampipe/: alert.h  common.h  filter.h  input.h  queue.h  wal.h
scripts/: install-service.sh  release.sh  run-sim.sh
src/: alert.c  asm_crc32.c  filter.c  input.c  main.c  queue.c  wal.c
